# dessins_geometriques_et_artistiques

./: .gitignore  README.md  dessins.py  pyproject.toml  regular_star.stl  requirements.txt
cad/: __init__.py  cad.py  cadtest.py  points.py
designs/: __init__.py  curves.py  designs_from_data.py  elastic_grids.py  folding_paper_dragons.py  fractal_stars.py  linear_designs.py  polygons_stars.py  simple_fractals.py  spec.py  surfaces.py  third_dimension.py
designs/curves/: __init__.py  orbiting_curves_design.py  rotating_curves_design.py  sprilaing_curves_design.py
designs/designs_from_data/: __init__.py  bird_fish_design.py  horse_design.py  lion_design.py  smurf_design.py
designs/elastic_grids/: __init__.py  elastic_grid_design.py
designs/folding_paper_dragons/: __init__.py  dragon_designs.py
designs/fractal_stars/: __init__.py  fractal_star_design.py
designs/linear_designs/: __init__.py  complete_bipartite_graph_design.py  linear_modulo_design.py  linear_sticks_design.py
designs/polygons_stars/: __init__.py  composition_1_designs.py  composition_2_designs.py  prettygon_designs.py  (+2 more)
shapes/: __init__.py  bird_fish.py  complete_bipartite_graph.py  composition_1.py  d3_data.py  d3cube.py  d3data.py  dragon.py  elastic_grid.py  fractal_star.py  horse.py  linear_modules.py  linear_modulo.py  linear_sticks.py  lion.py  orbiting_curves.py  prettygon.py  regular_polygon.py  rotating_curves.py  simple_fractal.py  simple_fractal_deformed.py  simple_fractal_rounded.py  smurf.py  surface.py  surfaces.py
stl/: dragon.stl  fractal_star.stl  regular_polygon5.stl
(+62 files in other folders)
